@@ -1,6 +1,10 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-10-11  Henrik Stuart <evilnet@hstuart.dk>
+
+	* src/mod-python.c: add emb_get_config function.
+
 2009-10-09  Henrik Stuart <evilnet@hstuart.dk>
 
 	* src/mod-python.c: add emb_timeq_del function.
